--- a/templates/all_week_days.html
+++ b/templates/all_week_days.html
@@ -11,9 +11,9 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th><a href="{{ week_days }}uz/">UZBEKISTAN</a></th>
-              <th><a href="{{ week_days }}ru/">RUSSIAN</a></th>
-            <th><a href="{{ week_days }}en/">ENGLISH</a></th>
+            <th><a href="uz/">UZBEKISTAN</a></th>
+              <th><a href="ru/">RUSSIAN</a></th>
+            <th><a href="{% url 'week_days_all' %}en/">ENGLISH</a></th>
           </tr>
         </thead>
         <tbody>
