--- a/templates/home_pupils.html
+++ b/templates/home_pupils.html
@@ -3,7 +3,11 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Puples</title>
+    <title>
+        {% block title %}
+        	Puples
+        {% endblock %}
+    </title>
 </head>
 <body>
     <div class="container mt-3">
@@ -19,23 +23,25 @@
                 <th>Jami</th>
               </tr>
             </thead>
-            <tbody>
                 {% for pupil in pupils %}
-                          <tr>
-                            <td>{{ pupil.id }}</td>
-                            <td><a href="{% url 'pupils' %}{{ pupil.id }}"> {{ pupil.name }}&nbsp;&nbsp;{{ pupil.last_name }} </a></td>
-                            <td>{{ pupil.m1_1 }}</td>
-                            <td>{{ pupil.m1_2 }}</td>
-                            <td>{{ pupil.m1_3 }}</td>
-                            <td>{{ pupil.m2_1 }}</td>
-                            <td>{{ pupil.m2_2 }}</td>
-                            <td>{{ pupil.m2_3 }}</td>
-                            <td>{{ pupil.m3_1 }}</td>
-                            <td>{{ pupil.m3_2 }}</td>
-                            <td>{{ pupil.all }}</td>
-                          </tr>
+                    {% block content %}
+                        <tbody>
+                              <tr>
+                                <td>{{ pupil.id }}</td>
+                                <td><a href="{% url 'pupils' %}{{ pupil.id }}"> {{ pupil.name }}&nbsp;&nbsp;{{ pupil.last_name }} </a></td>
+                                <td>{{ pupil.m1_1 }}</td>
+                                <td>{{ pupil.m1_2 }}</td>
+                                <td>{{ pupil.m1_3 }}</td>
+                                <td>{{ pupil.m2_1 }}</td>
+                                <td>{{ pupil.m2_2 }}</td>
+                                <td>{{ pupil.m2_3 }}</td>
+                                <td>{{ pupil.m3_1 }}</td>
+                                <td>{{ pupil.m3_2 }}</td>
+                                <td>{{ pupil.all }}</td>
+                              </tr>
+                        </tbody>
+                    {% endblock %}
                 {% endfor %}
-            </tbody>
           </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
